# zlude

./: LICENSE  Main.hs  README.md  zlude.cabal
Data/: Group.hs  Numbers.hs  NumbersTwo.hs  Numeric.hs  Ring.hs
Data/Group/: Instances.hs  Wrappers.hs
Zlude/: Bool.hs  Char.hs  Either.hs  Group.hs  Maybe.hs  Numeric.hs  String.hs
Zlude/Group/: Wrappers.hs
examples/: Main.hs
